# osiris_arm

./: .gitignore  CMakeLists.txt  arm-toolchain.cmake  cmake_install.cmake
amrInstruction/: error_log.txt  instruction_arm_final.xml  instructions_arm.xml  output.csv  wrong_ASM.  xmlToBytes_arm.py
arm-Instructions/: error_log.txt  instruction_arm_final.xml  instructions_arm.b64  instructions_arm.xml  output.csv  xmlToBytes_arm.py
armInstruction/: error_log.txt  instruction_arm_final.xml  instructions_arm.xml  output.csv  test.s
kernel_moudle/arm_pmu_module/: .Module.symvers.cmd  .arm_pmu.ko.cmd  .arm_pmu.mod.cmd  .arm_pmu.mod.o.cmd  .arm_pmu.o.cmd  .modules.order.cmd  Makefile  arm_pmu.c  arm_pmu.ko  arm_pmu.mod  arm_pmu.mod.c
kernel_moudle/arm_pmu_module/doc/: README.md
kernel_moudle/ic-moudle/: .Module.symvers.cmd  .ic-iallu.ko.cmd  .ic-iallu.mod.cmd  .ic-iallu.mod.o.cmd  .ic-iallu.o.cmd  .modules.order.cmd  Makefile  ic-iallu.c  ic-iallu.ko  ic-iallu.mod  ic-iallu.mod.c
kernel_moudle/ic-moudle/doc/: README.mk
openssl-1.1.1w/: Makefile  configdata.pm  libcrypto.pc  libcrypto.so.1.1  libssl.pc  libssl.so.1.1  openssl.pc  pod2htmd.tmp
openssl-1.1.1w/apps/: openssl
openssl-1.1.1w/crypto/: buildinf.h
openssl-1.1.1w/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
openssl-1.1.1w/test/: aborttest  afalgtest  asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  buildtest_c_aes  buildtest_c_asn1  buildtest_c_asn1t  buildtest_c_async  buildtest_c_bio  buildtest_c_blowfish  buildtest_c_bn  buildtest_c_buffer  buildtest_c_camellia  buildtest_c_cast  buildtest_c_cmac  buildtest_c_cms  buildtest_c_comp  buildtest_c_conf  buildtest_c_conf_api  buildtest_c_crypto  buildtest_c_ct  buildtest_c_des  buildtest_c_dh  buildtest_c_dsa  buildtest_c_dtls1  buildtest_c_e_os2  buildtest_c_ebcdic  buildtest_c_ec  (+142 more)
openssl-1.1.1w/tools/: c_rehash
src/: code_generator.cc  core.cc  core.h  executor.cc  executor.h  osiris.cc  utils.cc
src_arm/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  arm-toolchain.cmake  cmake_install.cmake
src_arm/src/: core.cc  executor.cc  osiris.cc
x86-instructions/: armTest.py  output.csv
